# serializer version: 1
# name: test_sensor_snapshot[sensor.del_norte_black_carbon-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.del_norte_black_carbon',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Black carbon',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Black carbon',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'bc',
    'unique_id': '2178_bc',
    'unit_of_measurement': 'μg/m³',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_black_carbon-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'friendly_name': 'Del Norte Black carbon',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'μg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_black_carbon',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.9',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_carbon_dioxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.del_norte_carbon_dioxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Carbon dioxide',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.CO2: 'carbon_dioxide'>,
    'original_icon': None,
    'original_name': 'Carbon dioxide',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '2178_co2',
    'unit_of_measurement': 'ppm',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_carbon_dioxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'device_class': 'carbon_dioxide',
      'friendly_name': 'Del Norte Carbon dioxide',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_carbon_dioxide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '415.0',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_carbon_monoxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.del_norte_carbon_monoxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Carbon monoxide',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.CO: 'carbon_monoxide'>,
    'original_icon': None,
    'original_name': 'Carbon monoxide',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '2178_co',
    'unit_of_measurement': 'ppm',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_carbon_monoxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'device_class': 'carbon_monoxide',
      'friendly_name': 'Del Norte Carbon monoxide',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_carbon_monoxide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.4',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_distance_from_home_assistant-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.del_norte_distance_from_home_assistant',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Distance from Home Assistant',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DISTANCE: 'distance'>,
    'original_icon': None,
    'original_name': 'Distance from Home Assistant',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'distance_from_home',
    'unique_id': '2178_distance_from_home',
    'unit_of_measurement': <UnitOfLength.KILOMETERS: 'km'>,
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_distance_from_home_assistant-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'device_class': 'distance',
      'friendly_name': 'Del Norte Distance from Home Assistant',
      'unit_of_measurement': <UnitOfLength.KILOMETERS: 'km'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_distance_from_home_assistant',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1011.981016',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_nitrogen_dioxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.del_norte_nitrogen_dioxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Nitrogen dioxide',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.NITROGEN_DIOXIDE: 'nitrogen_dioxide'>,
    'original_icon': None,
    'original_name': 'Nitrogen dioxide',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '2178_no2',
    'unit_of_measurement': 'ppb',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_nitrogen_dioxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'device_class': 'nitrogen_dioxide',
      'friendly_name': 'Del Norte Nitrogen dioxide',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppb',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_nitrogen_dioxide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15.0',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_nitrogen_monoxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.del_norte_nitrogen_monoxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Nitrogen monoxide',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.NITROGEN_MONOXIDE: 'nitrogen_monoxide'>,
    'original_icon': None,
    'original_name': 'Nitrogen monoxide',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '2178_no',
    'unit_of_measurement': 'ppb',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_nitrogen_monoxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'device_class': 'nitrogen_monoxide',
      'friendly_name': 'Del Norte Nitrogen monoxide',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppb',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_nitrogen_monoxide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6.0',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_nitrogen_oxides-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.del_norte_nitrogen_oxides',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Nitrogen oxides',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Nitrogen oxides',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'nox',
    'unique_id': '2178_nox',
    'unit_of_measurement': 'ppb',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_nitrogen_oxides-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'friendly_name': 'Del Norte Nitrogen oxides',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppb',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_nitrogen_oxides',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '17.0',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_ozone-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.del_norte_ozone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ozone',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.OZONE: 'ozone'>,
    'original_icon': None,
    'original_name': 'Ozone',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '2178_o3',
    'unit_of_measurement': 'ppb',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_ozone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'device_class': 'ozone',
      'friendly_name': 'Del Norte Ozone',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppb',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_ozone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22.0',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_pm1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.del_norte_pm1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PM1',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM1: 'pm1'>,
    'original_icon': None,
    'original_name': 'PM1',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '2178_pm1',
    'unit_of_measurement': 'μg/m³',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_pm1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'device_class': 'pm1',
      'friendly_name': 'Del Norte PM1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'μg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_pm1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8.5',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_pm10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.del_norte_pm10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PM10',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM10: 'pm10'>,
    'original_icon': None,
    'original_name': 'PM10',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '2178_pm10',
    'unit_of_measurement': 'μg/m³',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_pm10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'device_class': 'pm10',
      'friendly_name': 'Del Norte PM10',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'μg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_pm10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '33.2',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_pm2_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.del_norte_pm2_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PM2.5',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
    'original_icon': None,
    'original_name': 'PM2.5',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '2178_pm25',
    'unit_of_measurement': 'μg/m³',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'device_class': 'pm25',
      'friendly_name': 'Del Norte PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'μg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_pm2_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12.1',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_sulphur_dioxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.del_norte_sulphur_dioxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sulphur dioxide',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.SULPHUR_DIOXIDE: 'sulphur_dioxide'>,
    'original_icon': None,
    'original_name': 'Sulphur dioxide',
    'platform': 'openaq',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '2178_so2',
    'unit_of_measurement': 'ppb',
  })
# ---
# name: test_sensor_snapshot[sensor.del_norte_sulphur_dioxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by OpenAQ',
      'device_class': 'sulphur_dioxide',
      'friendly_name': 'Del Norte Sulphur dioxide',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppb',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.del_norte_sulphur_dioxide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.0',
  })
# ---
